--- a/imports/ui/stylesheets/_base.scss
+++ b/imports/ui/stylesheets/_base.scss
@@ -1,31 +1,31 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+// * {
+//   margin: 0;
+//   padding: 0;
+//   box-sizing: border-box;
+// }
 
-html {
-  font-size: 62.5%;
-}
+// html {
+//   font-size: 62.5%;
+// }
 
-body {
-  font-size: 1.6rem;
-}
+// body {
+//   font-size: 1.6rem;
+// }
 
-h1 {
-  font-weight: 300;
-  font-size: 2.4rem;
-}
+// h1 {
+//   font-weight: 300;
+//   font-size: 2.4rem;
+// }
 
-h2 {
-}
+// h2 {
+// }
 
-p {
-  font-size: 1.4rem;
-}
+// p {
+//   font-size: 1.4rem;
+// }
 
-a {
-}
+// a {
+// }
 
 .pull-right {
   text-align: right;
